--- a/docs/src/content/docs/keybindings/tmux.mdx
+++ b/docs/src/content/docs/keybindings/tmux.mdx
@@ -14,7 +14,7 @@ A comprehensive reference of all custom keybindings configured in Tmux.
 
 <div class="keybindings-page">
 
-## Mouse Control
+## Mouse Mode
 
 | Key          | Description        |
 | ------------ | ------------------ |
@@ -78,14 +78,14 @@ A comprehensive reference of all custom keybindings configured in Tmux.
 | `Enter` or `y` | Yank selection    |
 | `prefix + ]`   | Paste yanked text |
 
-## Plugin: Tmux Resurrect
+## Plugin: Resurrect
 
 | Key               | Description          |
 | ----------------- | -------------------- |
 | `prefix + Ctrl+s` | Save tmux session    |
 | `prefix + Ctrl+r` | Restore tmux session |
 
-## Plugin: Tmux Open
+## Plugin: Open
 
 | Key      | Description                  |
 | -------- | ---------------------------- |
@@ -93,7 +93,7 @@ A comprehensive reference of all custom keybindings configured in Tmux.
 | `o`      | Open selection with xdg-open |
 | `S`      | Search selection on Google   |
 
-## Plugin: Tmux Gentrify
+## Plugin: Gentrify
 
 | Key              | Description |
 | ---------------- | ----------- |
@@ -114,7 +114,7 @@ A comprehensive reference of all custom keybindings configured in Tmux.
 | `Enter`        | Copy selected text (in extrakto)      |
 | `Tab`          | Insert selected text (in extrakto)    |
 
-## Plugin: Tmux Notify
+## Plugin: Notify
 
 | Key              | Description                                                    |
 | ---------------- | -------------------------------------------------------------- |
