--- a/docs/src/content/docs/guides/overview.mdx
+++ b/docs/src/content/docs/guides/overview.mdx
@@ -7,21 +7,27 @@ The table below is a comprehensive list of the core components used by this desk
 
 <div class="overview-table">
 
-| Category                 | -                                                                   |
-| ------------------------ | ------------------------------------------------------------------- |
-| **Shell**                | bash                                                                |
-| **Prompt**               | Starship                                                            |
-| **Editor**               | Neovim                                                              |
-| **Font**                 | JetBrainsMono NL                                                    |
-| **Terminal**             | Alacritty / Kitty                                                   |
-| **Multiplexer**          | Tmux                                                                |
-| **Color Theme**          | Based on [Catppuccin Mocha Palette](https://catppuccin.com/palette) |
-| **Window Manager**       | i3                                                                  |
-| **Compositor**           | picom                                                               |
-| **Status Bar**           | Bumblebee / Polybar                                                 |
-| **Application Launcher** | Rofi / Albert                                                       |
-| **File Manager**         | Yazi                                                                |
-| **Notification Daemon**  | Dunst                                                               |
-| **Version Manager**      | mise                                                                |
+| Category                 | i3                   | Sway/SwayFx |
+| ------------------------ | -------------------- | ----------- |
+| **Compositor**           | picom                | built-in    |
+| **Status Bar**           | Bumblebee \| Polybar | Waybar      |
+| **Application Launcher** | Rofi \| Albert       | Rofi        |
+
+</div>
+
+<div class="overview-table">
+
+| Category                | -                                                                   |
+| ----------------------- | ------------------------------------------------------------------- |
+| **Shell**               | bash                                                                |
+| **Prompt**              | Starship                                                            |
+| **Editor**              | Neovim                                                              |
+| **Font**                | JetBrains Mono                                                      |
+| **Terminal**            | Alacritty \| Kitty                                                  |
+| **Multiplexer**         | Tmux                                                                |
+| **Color Theme**         | Based on [Catppuccin Mocha Palette](https://catppuccin.com/palette) |
+| **File Manager**        | Yazi                                                                |
+| **Notification Daemon** | Dunst                                                               |
+| **Version Manager**     | mise                                                                |
 
 </div>
