docs: keybindings/wm: add brightness keybindings

--- a/docs/src/content/docs/keybindings/wm.mdx
+++ b/docs/src/content/docs/keybindings/wm.mdx
@@ -133,6 +133,13 @@ While in resize mode `$mod+r`:
 | `XF86AudioMute`        | Toggle Audio mute      |
 | `XF86AudioMicMute`     | Toggle microphone mute |
 
+### Brightness
+
+| Key                   | Description                      |
+| --------------------- | -------------------------------- |
+| `XF86MonBrightnessUp` | Increase screen brightness by 5% |
+| `XF86MonBrightnessUp` | Decrease screen brightness by 5% |
+
 ### Applications
 
 | Key           | Description               |
