--- a/docs/src/content/docs/guides/overview.mdx
+++ b/docs/src/content/docs/guides/overview.mdx
@@ -3,15 +3,16 @@ title: Desktop Overview
 description: Desktop Environment Overview
 ---
 
-The table below is a comprehensive list of the core components used by this desktop environment.
+The table below is a comprehensive list of the core components
+used by this desktop environment.
 
 <div class="overview-table">
 
 | Category                 | i3                   | Sway/SwayFx |
 | ------------------------ | -------------------- | ----------- |
 | **Compositor**           | picom                | built-in    |
-| **Status Bar**           | Bumblebee \| Polybar | Waybar      |
-| **Application Launcher** | Rofi \| Albert       | Rofi        |
+| **Status Bar**           | Bumblebee\|Polybar | Waybar      |
+| **Application Launcher** | Rofi\|Albert       | Rofi        |
 
 </div>
 
@@ -23,7 +24,7 @@ The table below is a comprehensive list of the core components used by this desk
 | **Prompt**              | Starship                                                            |
 | **Editor**              | Neovim                                                              |
 | **Font**                | JetBrains Mono                                                      |
-| **Terminal**            | Alacritty \| Kitty                                                  |
+| **Terminal**            | Alacritty\|Kitty                                                  |
 | **Multiplexer**         | Tmux                                                                |
 | **Color Theme**         | Based on [Catppuccin Mocha Palette](https://catppuccin.com/palette) |
 | **File Manager**        | Yazi                                                                |
