--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -5,8 +5,8 @@ template: splash
 hero:
   tagline: >
     An opinionated terminal-driven workspace.
-    Explore my i3wm, dotfiles settings and Neovim
-    setup built for speed with a modern CLI workflow.
+    Explore my i3wm/sway setup, dotfiles settings and Neovim
+    configuration built for speed with a modern CLI workflow.
   image:
     alt: Home Logo
     dark: ../../assets/logos/home/home-dark.png
@@ -28,7 +28,7 @@ import { Logos, Screenshots } from "../../scripts/common.ts";
   ensure reliable maintenance, I focus on these specific versions rather than
   universal compatibility—though the configuration files remain
   platform-independent. If you would like to help extend support to a different
-  distribution, open an issue on [Github](https://github.com/envyj020/dotfiles/issues)!
+  distribution, happy to connect on [Github](https://github.com/envyj020/dotfiles/issues)!
   <div class="distro-grid">
     {Logos.map((logo) => (
       <div class="distro-card">
