--- a/docs/src/content/docs/keybindings/neovim.mdx
+++ b/docs/src/content/docs/keybindings/neovim.mdx
@@ -9,7 +9,9 @@ A comprehensive reference of all custom keybindings configured in Neovim.
 
 <Aside icon="vim" title="Neovim Leader Key: <Space>">
   Please note that many of the keybindings listed below reference actions or
-  commands provided by third party plugins.
+  commands provided by third party extensions. Plugins, tree-sitter parsers,
+  formatters, linters and LSP's will be installed the very first time Neovim is
+  opened.
 </Aside>
 
 <div class="keybindings-page">
@@ -217,7 +219,7 @@ A comprehensive reference of all custom keybindings configured in Neovim.
 | `pb`          | Normal | Previous breakpoint           |
 | `sb`          | Normal | Current stopped breakpoint    |
 
-## DAP Language Specific
+## DAP Integrations
 
 | Key           | Mode   | Description                    |
 | ------------- | ------ | ------------------------------ |
@@ -238,14 +240,14 @@ A comprehensive reference of all custom keybindings configured in Neovim.
 | ------------- | ------ | ------------------------ |
 | `<Leader>ddb` | Normal | Opens db ui in a new tab |
 
-## Utilities
+## Miscellaneous
 
-| Key           | Mode   | Description     |
-| ------------- | ------ | --------------- |
-| `<Leader>url` | Normal | View URLs       |
-| `<Leader>tw`  | Normal | Toggle Twilight |
+| Key           | Mode   | Description       |
+| ------------- | ------ | ----------------- |
+| `<Leader>url` | Normal | View URLs         |
+| `<Leader>tw`  | Normal | Toggle Focus Mode |
 
-## Editing Shortcuts
+## Editing Motions
 
 | Key         | Mode           | Description                             |
 | ----------- | -------------- | --------------------------------------- |
