--- a/docs/src/content/docs/keybindings/wm.mdx
+++ b/docs/src/content/docs/keybindings/wm.mdx
@@ -1,6 +1,6 @@
 ---
 title: Window Manager
-description: i3/sway Keybindings Reference
+description: i3wm/sway Keybindings Reference
 tableOfContents:
   minHeadingLevel: 1
   maxHeadingLevel: 3
