docs: chore improvements

--- a/docs/src/content/docs/guides/installation.mdx
+++ b/docs/src/content/docs/guides/installation.mdx
@@ -81,8 +81,8 @@ To ensure your workspace looks and behaves correctly after a reboot, please comp
 
 ### 1. Optional: Set your wallpaper
 
-By default, i3 looks for its wallpaper at `~/Pictures/wallpaper.jpg`. While a default one is provided
-with the standalone installer method, you can set your own by overriding it.
+By default, i3 and/or Sway look for their wallpaper at `~/Pictures/wallpaper.jpg`. While a default one is provided
+with the standalone installer method, you can set your own by replacing it.
 
 ### 2. Optional: API Tokens
 
@@ -105,7 +105,7 @@ The table below outlines the expected filenames:
 
 ### 3. Optional: Change i3/Sway terminal
 
-While Alacritty is the standard default, you can switch to your preferred terminal by modifying
+While Alacritty is set as the default term, you can switch to your preferred terminal by modifying
 the `$TERMINAL` environment variable. This will automatically update the terminal launched by
 the window manager `mod+Enter` shortcut.
 
