--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,8 +1,9 @@
 ---
-title: Yet another dotfiles
-description: i3wm, Neovim and common dotfiles settings
+title: Home
+description: i3wm/sway, Neovim and dotfiles settings
 template: splash
 hero:
+  title: Yet another dotfiles
   tagline: >
     An opinionated terminal-driven workspace.
     Explore my i3wm/sway setup, dotfiles settings and Neovim
