--- a/docs/src/content/docs/keybindings/wm.mdx
+++ b/docs/src/content/docs/keybindings/wm.mdx
@@ -9,7 +9,7 @@ tableOfContents:
 import { Aside } from "@astrojs/starlight/components";
 
 Regardless of whether you are running i3 or its successor Sway, the keybindings
-listed below remain consistent across both environments.
+listed below remain consistent across both window managers.
 
 <Aside icon="laptop" title="i3 Modifier Keys">
     - `$mod` is mapped to `Super` - Windows key
