--- a/docs/src/content/docs/guides/overview.mdx
+++ b/docs/src/content/docs/guides/overview.mdx
@@ -8,27 +8,27 @@ used by this desktop environment.
 
 <div class="overview-table">
 
-| Category                 | i3                   | Sway/SwayFx |
-| ------------------------ | -------------------- | ----------- |
-| **Compositor**           | picom                | built-in    |
-| **Status Bar**           | Bumblebee\|Polybar | Waybar      |
-| **Application Launcher** | Rofi\|Albert       | Rofi        |
+| Category                 | i3                                                                                                                                 | Sway/SwayFx                                                          |
+| ------------------------ | ---------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
+| **Compositor**           | [picom](https://picom.app)                                                                                                         | built-in                                                             |
+| **Status Bar**           | [Bumblebee](https://bumblebee-status.readthedocs.io/en/latest) \| [Polybar](https://github.com/polybar/polybar?tab=readme-ov-file) | [Waybar](https://waybar.org/)                                        |
+| **Application Launcher** | [Rofi](https://github.com/davatorium/rofi?tab=readme-ov-file#-rofi-) \| [Albert](https://albertlauncher.github.io)                 | [Rofi](https://github.com/davatorium/rofi?tab=readme-ov-file#-rofi-) |
 
 </div>
 
 <div class="overview-table">
 
-| Category                | -                                                                   |
-| ----------------------- | ------------------------------------------------------------------- |
-| **Shell**               | bash                                                                |
-| **Prompt**              | Starship                                                            |
-| **Editor**              | Neovim                                                              |
-| **Font**                | JetBrains Mono                                                      |
-| **Terminal**            | Alacritty\|Kitty                                                  |
-| **Multiplexer**         | Tmux                                                                |
-| **Color Theme**         | Based on [Catppuccin Mocha Palette](https://catppuccin.com/palette) |
-| **File Manager**        | Yazi                                                                |
-| **Notification Daemon** | Dunst                                                               |
-| **Version Manager**     | mise                                                                |
+| Category                | -                                                                              |
+| ----------------------- | ------------------------------------------------------------------------------ |
+| **Shell**               | [Bash](https://www.gnu.org/software/bash)                                      |
+| **Prompt**              | [Starship](https://starship.rs)                                                |
+| **Editor**              | [Neovim](https://neovim.io)                                                    |
+| **Font**                | [JetBrains Mono](https://www.jetbrains.com/lp/mono)                            |
+| **Terminal**            | [Alacritty](https://alacritty.org) \| [Kitty](https://sw.kovidgoyal.net/kitty) |
+| **Multiplexer**         | [Tmux](https://github.com/tmux/tmux/wiki)                                      |
+| **Color Theme**         | Based on [Catppuccin Mocha Palette](https://catppuccin.com/palette)            |
+| **File Manager**        | [Yazi](https://yazi-rs.github.io)                                              |
+| **Notification Daemon** | [Dunst](https://dunst-project.org)                                             |
+| **Version Manager**     | [mise](https://mise.jdx.dev)                                                   |
 
 </div>
